fixed test alignment

--- a/style.css
+++ b/style.css
@@ -24,11 +24,11 @@
 }
 
 h1 {
-  text-align: center;
-  margin-bottom: -15px;
-  margin-top: -35px;
+  text-align: left;
+  margin-bottom: 0px;
+  margin-top: 0px;
   color: #f691fa;
-  font-size: 50px;
+  font-size: 38px;
   text-shadow: 4px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
   font-family: Arial;
 }
@@ -43,7 +43,7 @@ h3 {
   }
 
 .container {
-  width: 540px;
+  width: 280px;
   margin: 0 auto;
   padding: 10px;
   text-align: center;
@@ -57,7 +57,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 70vh;
 }
 
 #current-player {
